<resources>
    <string name="app_name">Zest</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email Or Username</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="ujh">UJH</string>
    <string name="the">The</string>
    <string name="title" />
    <string name="description" />
    <string name="search" />
</resources>